--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 *.slo
 *.lo
 *.o
-*.obj
+./*.obj
 
 # Precompiled Headers
 *.gch
@@ -32,7 +32,7 @@
 *.app
 
 # Images
-*.bmp
+./*.bmp
 
 # folders
 build/
