1. Added Color structure to store info about pixel color 2. Changed all operations with color to Color struct 3. Added subpixel bufferisation if pixel is inside of the triangle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ add_executable(testapp main.cpp
                        ./structs/Vec.cpp
                        ./structs/Mat.cpp
                        SubPixel_buf.cpp
-                       )
+                        "color/color.cpp" "color/color.h")
 endif()
 include_directories(./ external/LiteMath)
 
