--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-.vs/
-out/
-build/
+.vs
+out
+build
 CMakeSettings.json
